# agent-service-agreements

./: README.md  agent_service_agreements_whitepaper.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
agent_service_agreements/: __init__.py  agreement.py  cli.py  dimensions.py  escrow.py  evaluator.py  negotiation.py  schema.py  store.py  templates.py  verification.py
tests/: test_agreement.py  test_cli.py  test_dimensions.py  test_escrow.py  test_evaluator.py  test_negotiation.py  test_schema.py  test_store.py  test_templates.py  test_verification.py
