[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-service-agreements"
version = "0.1.0"
description = "Machine-readable service contracts and quality verification for autonomous agent commerce — the agreements layer of the Agent Trust Stack"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "AB Support", email = "info@vibeagentmaking.com" },
]
keywords = [
    "agent", "service", "agreement", "sla", "quality", "verification",
    "escrow", "negotiation", "trust", "commerce", "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://vibeagentmaking.com"
Repository = "https://github.com/vibeagentmaking/agent-service-agreements"
Whitepaper = "https://vibeagentmaking.com/whitepaper/service-agreements/"

[project.optional-dependencies]
arp = ["agent-rating-protocol>=0.1.0"]
ajp = ["agent-justice-protocol>=0.1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
agent-service = "agent_service_agreements.cli:main"

[tool.setuptools.packages.find]
include = ["agent_service_agreements*"]
